Write tree in file : OK, write test in file : fail, need modif for print color (maybe with QT) print in QT : fail maybe change the font size

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 
 target/
 
-/src/QtWindow/CMakeFiles
-/src/QtWindow/main_autogen
-/src/QtWindow/CMakeCache.txt
-/src/QtWindow/cmake_install.cmake
-/src/QtWindow/main
+src/windowQT/CMakeFiles
+src/windowQT/Makefile
+src/windowQT/main_autogen
+src/windowQT/CMakeCache.txt
+src/windowQT/cmake_install.cmake
+src/windowQT/main
