Update with new class

--- a/src/windowQt/CMakeLists.txt
+++ b/src/windowQt/CMakeLists.txt
@@ -47,6 +47,8 @@ else()
     Treewidget.cpp
     Treewidget.cpp
     Treewidget.hpp
+    Mytextedit.cpp
+    Mytextedit.hpp
     ../lib/Parser.cpp
     ../lib/Parser.hpp
     ../lib/Tree.cpp
