--- a/src/windowQt/CMakeLists.txt
+++ b/src/windowQt/CMakeLists.txt
@@ -49,6 +49,8 @@ else()
     Treewidget.hpp
     Mytextedit.cpp
     Mytextedit.hpp
+    Myexitbutton.cpp
+    Myexitbutton.hpp
     ../lib/Parser.cpp
     ../lib/Parser.hpp
     ../lib/Tree.cpp
